src/test/deca/context/valid/valid_sans_objet/instructions.deca
// Description:
//    Programme de tests des instrucions.
//

{
	int x = readInt();
	boolean z = x == 2;
	float f = readFloat();
	printlnx(x, x + 3);
}