src/test/deca/context/invalid/invalid_essentiel/protected_1.deca
// Description:
//    Programme de test de l'utilisation non autorisée des champs protected.
//

class A {
	protected int x;
}

{
	A a = new A();
	int x = a.x;
}